--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fastcheck-server-api",
   "version": "1.0.0",
   "description": "Small API service for Fastcheck",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
@@ -20,5 +20,8 @@
     "smtp-server": "^3.10.0",
     "sqlite3": "^5.0.2",
     "xhr2": "^0.2.1"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
