--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Small API service for Fastcheck",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
-  },
+    "start": "node server.js",
+    "start:dev": "nodemon server.js"
+  },  
   "author": "Ruben Sindrestean",
   "license": "ISC",
   "devDependencies": {
